Bugs opgelost, profiel foto kan je uploaden en word weer gegeven, Unit tests bijgewerkt, Layout aangepast.

--- a/TechnotheekUnitTests/TechnotheekUnitTests.csproj
+++ b/TechnotheekUnitTests/TechnotheekUnitTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Technotheek.net Core\Technotheek.net Core.csproj" />
+    <ProjectReference Include="..\Technotheek.net Core\TEchnotheekWebApp.csproj" />
   </ItemGroup>
 
 </Project>
